Fix vertical alignment for various nav icons

--- a/resources/sass/elements/icons.scss
+++ b/resources/sass/elements/icons.scss
@@ -6,6 +6,7 @@ svg {
     display: inline;
     max-width: 100%;
     max-height: 100%;
+    vertical-align: baseline;
 }
 
 .heroicon-component-accent {
